fix scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -39,6 +39,16 @@ body {
     width: 100%;
     max-width: 100vw;
 }
+::-webkit-scrollbar {
+    width: 4px;
+    background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--gray3);
+}
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
 .fade-enter-active, .fade-leave-active {
     transition: opacity 0.3s ease;
 }
